[gd_scene load_steps=4 format=3 uid="uid://dx6fr5taywvcx"]

[ext_resource type="PackedScene" uid="uid://bet055jldfxdj" path="res://Scenes/UI/ui_root.tscn" id="1_wenkf"]
[ext_resource type="Texture2D" uid="uid://boyot0t0bwg4m" path="res://Assets/UI/RetroWindowsGUI/RetroWindowsGUI/Windows_Button.png" id="2_ijx6o"]
[ext_resource type="Script" path="res://Scenes/UI/UIWidgets/Items/item.gd" id="2_pmgjq"]

[node name="Item" instance=ExtResource("1_wenkf")]
script = ExtResource("2_pmgjq")
ui = "res://Scenes/UI/UIWidgets/Popups/ItemPopups/base_button_popup.tscn"

[node name="NinePatchRect" type="NinePatchRect" parent="." index="0"]
layout_mode = 0
offset_right = 37.0
offset_bottom = 36.0
texture = ExtResource("2_ijx6o")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="background" type="Button" parent="NinePatchRect" index="0"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 37.0
offset_bottom = 36.0
focus_mode = 0

[node name="item" type="TextureRect" parent="." index="1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 35.0
offset_bottom = 34.0
mouse_filter = 2

[node name="HoverTimer" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="mouse_entered" from="NinePatchRect/background" to="." method="_on_background_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/background" to="." method="_on_background_mouse_exited"]
[connection signal="timeout" from="HoverTimer" to="." method="_on_hover_timer_timeout"]
